# monitrust

./: .gitignore  Cargo.toml  Containerfile  Dockerfile  README.md  build-package.sh  build.sh  reporters.json.example  run.sh  watchers.json.example
debian/: service
src/: main.rs  scheduled_watcher.rs
src/alert_reporter/: mod.rs
src/alert_reporter/reporter/: mod.rs  telegram.rs
src/alert_reporter/reporters/: mail.rs  mod.rs  telegram.rs
src/watcher/: disk_space.rs  heartbeat.rs  memory.rs  mod.rs
static/: index.html  manifest.json  service_worker.js
