[package]
name = "monitrust"
version = "0.1.0"
authors = ["Paul Lesur <gitconfig@lesurpaul.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
nix = { version = "0.27.1", default_features = false, features = ["fs"] }
tokio = { version = "1.35.1", features = ["full"] }
teloxide = "0.12.2"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_with = "3.6.1"
tracing = "0.1.40"
futures = "0.3.30"
thiserror = "1.0.57"
tracing-subscriber = "0.3.18"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
panic = 'abort'
codegen-units = 1
