[package]
name = "monitrust"
version = "0.1.0"
authors = ["Paul Lesur <gitconfig@lesurpaul.fr>"]
edition = "2021"
description = "A dumb watchdog + alert manager for self-hosted systems."
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "monitrust"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
nix = { version = "0.30", default-features = false, features = ["fs"], optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
teloxide = { version = "0.15.0", optional = true }
thiserror = "2.0.12"
tokio = { version = "1.45", default-features = false, optional = true }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
enum_dispatch = "0.3.13"
derive_more = { version = "2.0.1", features = ["debug"] }
lettre = { version = "0.11.16", features = ["sendmail-transport", "tracing"], optional = true }

[features]
default = ["telegram", "nix", "mail"]
telegram = ["dep:teloxide", "tokio/rt-multi-thread"]
nix = ["dep:nix"]
mail = ["dep:lettre"]

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
panic = 'abort'
codegen-units = 1

[package.metadata.deb]
maintainer = "Paul Lesur <me@lesurpaul.fr>"
license-file = "LICENSE"
extended-description = "A dumb watchdog + alert manager for self-hosted systems."
depends = "systemd"
section = "utility"
priority = "optional"
assets = [
    ["target/release/monitrust", "usr/bin/", "755"],
    ["reporters.json", "etc/monitrust/", "644"],
    ["watchers.json", "etc/monitrust/", "644"],
]
maintainer-scripts = "debian/"
systemd-units = { enable = true }
